# earnings

./: .env.example  .env_example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_rag.py
.claude/: settings.local.json
FinSight/: README.md  requirements.txt
FinSight/.devcontainer/: devcontainer.json
FinSight/src/react_agent/: claude_pdf_analyzer.py
earnings-main/: .env_example  CLAUDE.md  MIGRATION_SUMMARY.md  README.md  app.py  langgraph.json  requirements.txt  test_imports.py
earnings-main/agents/: financial_research_agent.py  financial_verification_agent.py  financial_workflow.py
earnings-main/config/: constants.py  settings.py
earnings-main/document_processor/: __init__.py  financial_document_processor.py
earnings-main/retriever/: financial_retriever_builder.py
earnings-main/src/evaluation/: run_evaluation.py
earnings-main/src/react_agent/: financial_analyst_app.py
earnings-main/tools/: calculation_tools.py  market_data_tools.py
src/evaluation/: llm_earnings_evaluator.py  run_evaluation.py
src/evaluation/result/: direction_metrics_llm_by_random_100.csv  predictions_llm_by_random_100.csv  regression_metrics_llm_by_random_100.csv
src/react_agent/: claude_pdf_analyzer.py  file_search.py  financial_agents.py  financial_analyst_app.py  graph.py  metrics_extractor.py  pdf_data_extractor.py  prompts.py  rag_config.py  rag_pdf_analyzer.py  utils.py
